tests/integration/errors/test_struct_missing_arrow.sn
# Error test: struct declaration missing '=>'

struct Point
    x: double
    y: double

fn main(): void =>
    print("Should not compile\n")
